# covershift

./: .env.example  .gitignore  App.tsx  CHANGELOG.md  PRODUCT.md  README.md  README_en.md  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
components/: AchievementPopup.tsx  ApiKeyModal.tsx  BrandMark.tsx  ChronoDial.tsx  ConfigurationSection.tsx  CoverShiftPassport.tsx  CreativeStyleSelector.tsx  CustomPromptEditor.tsx  DecadeSelector.tsx  EraArchiveCard.tsx  Footer.tsx  GenerationDarkroom.tsx  HistoryPanel.tsx  MagazineCover.tsx  MagazineSelector.tsx  ResultsSection.tsx  ShareTicket.tsx  UXShowcase.tsx  UploadSection.tsx  ViewToggle.tsx
docs/: features-v2.md  progress.md
docs/ai-context/: project-structure.md
hooks/: index.ts  useAppState.ts  useDownload.ts  useGeneration.ts  useMediaQuery.ts  usePlayerProgress.ts
lib/: albumUtils.ts  faceUtils.ts  historyUtils.ts  promptBuilder.ts
public/brand/: README.md
services/: geminiService.ts  generationService.ts  imageModelService.ts  promptBuilder.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: EraPicker.tsx  ErrorBoundary.tsx  StyleSelector.tsx
src/config/: achievements.ts  creativeStyles.ts  eras.ts  index.ts  magazines.ts  narratives.ts  presets.ts  randomEvents.ts
src/contexts/: ToastContext.tsx
src/services/: generationService.ts  index.ts  (+1 more)
stitch_idleforge/: human_in_the_loop.md_1.md  life_os_scenario.md_2.md  mvp_status.md_2.md  project_plan.md_2.md  readme.md_1.md
(+22 files in other folders)
