[package]
name = "covershift"
version = "0.1.0"
description = "CoverShift 跃像 - 多元宇宙形象创作平台"
authors = ["Chris"]
license = "Apache-2.0"
repository = "https://github.com/lrosa72/CoverShift"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
